增加创建方法
